--- a/A1index.html
+++ b/A1index.html
@@ -24,7 +24,7 @@
   <main>
     <section id="about" aria-labelledby="about-heading">
       <h2 id="about-heading">About This Page</h2>
-      <p>This page demonstrates the use of semantic HTML5 elements, accessibility enhancements, and SEO-friendly practices. It uses clear headings, organized content, and proper HTML structure for readability and usability.</p>
+      <p>This page demonstrates the use of semantic HTML5 elements, accessibility enhancements, and SEO-friendly practices. It uses clear headings, organized content, and proper HTML structure for readability and usability</p>
     </section>
 
     <section id="features" aria-labelledby="features-heading">
